src/test/deca/syntax/invalid/sansObjet/incompleteIf.deca
{int a =3;
if(a>2{
print("hello world");}